# harness-self-governance

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agent/: context.json
.github/workflows/: ci.yml
adapters/hermes/: adapter.yaml  install.sh  verify.sh
docs/: architecture.md  project-status.md  quickstart.md  roadmap.md  safety-model.md  storage-guard.md
docs/agent/: agent-memory-graph-global-protocol.md  archive-lifecycle-governance.md  archive-trigger-policy.md  budgeted-graph-traversal-context-router.md  graph-governed-context-protocol.md  live-session-vs-compiled-memory-boundary.md  manual-session-archive-bootstrap.md
docs/plans/: 2026-04-29-agent-readable-graph-memory-retriever.md  v1.1-reviewed-action-layer.md  v2.0-agent-triggered-archive.md  v2.0-graph-dashboard-roadmap.md  v2.0-graph-logs-feedback-iteration.md  v2.0-graph-logs-interaction-iteration-2.md  v2.0-graph-logs-interaction-iteration-3.md  v2.0-graph-schema.md  v2.0-session-knowledge.md  v2.0-ui-safety-boundary.md
docs/projects/: ehrlab-dirty-csv-data-cleaning-project-book.md  ehrlab-dirtycsv-project-book.md  harness-self-governance-project-book.md
docs/runtime/: graph-memory-context-contract.md  hermes-graph-memory-plugin.md
policies/: approval-gates.yaml
scripts/: package_build_check.py  release_leak_scan.py
src/agent_memory_graph/: __init__.py  archive.py  archive_gate.py  archive_quality.py  archive_triggers.py  artifacts.py  bootstrap.py  cli.py  context_gaps.py  context_index.py  context_packet.py  evidence_anchor.py  export.py  lineage.py  maintenance.py  pending_lifecycle.py  pending_updates.py  profile_local_graph.py  profiles.py  router.py  (+6 more)
templates/: adapter-review.template.md  audit-report.template.md  governance-policy.template.md  release-checklist.template.md
tests/: test_agent_memory_graph_agent_summary_contract.py  test_agent_memory_graph_archive.py  test_agent_memory_graph_archive_lifecycle.py  test_agent_memory_graph_archive_triggers.py  test_agent_memory_graph_bootstrap.py  test_agent_memory_graph_cli.py  test_agent_memory_graph_context_index.py  test_agent_memory_graph_evidence_anchor.py  test_agent_memory_graph_examples.py  test_agent_memory_graph_export.py  test_agent_memory_graph_miss_policy.py  test_agent_memory_graph_profile_local_graph.py  test_agent_memory_graph_retrieval_quality.py  test_agent_memory_graph_retrieve.py  test_agent_memory_graph_routing.py  test_agent_memory_graph_runtime_traces.py  test_agent_memory_graph_traversal.py  test_agent_memory_graph_weighted_traversal.py  test_archive_lifecycle_dashboard_pipeline.py  test_cli.py  test_dashboard.py  test_evidence.py  test_export.py  test_factors.py  test_gates.py  test_graph_export.py  test_identity.py  test_leak_scan.py  test_lineage_index.py  test_pipeline.py  test_policy.py  test_profiles.py  test_projects.py  test_provenance.py  test_release_audit.py  test_release_readiness_metadata.py  test_repo_context_manifest.py  test_retrieve.py  test_schema.py  test_sessions.py  (+5 more)
(+63 files in other folders)
