[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-harness-maintain"
version = "1.1.0"
description = "Local governance, audit, and reviewed-proposal pipeline for agent-maintained repositories."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "graph-harness maintainers"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
ghm = "graph_harness_maintain.cli:main"
graph-harness-maintain = "graph_harness_maintain.cli:main"
agent-graph = "graph_harness_maintain.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/graph_harness_maintain"]
