[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-harness-maintain"
version = "2.0.0"
description = "Local-first governance, dual-graph context, and archive-governed release pipeline for agent-maintained repositories."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "graph-harness maintainers"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
ghm = "graph_harness_maintain.cli:main"
graph-harness-maintain = "graph_harness_maintain.cli:main"
agent-graph = "agent_memory_graph.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/graph_harness_maintain", "src/agent_memory_graph"]
